# back-py

./: LICENSE  README.md  package-lock.json  package.json  tailwind.config.js
app/: globals.css  layout.js  middleware.js  page.js
app/(auth)/login/: page.js
app/(protected)/: page.js
app/(protected)/config/: page.js
app/(protected)/dashboard/: page.js
app/(protected)/protected/cadastro/: page.js
app/(protected)/support/: page.js
hooks/: userUser.js
lib/: fetch.js
server/: alembic.ini  pyproject.toml  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 2c2e05181344_initial.py
server/app/: config.py  db.py  deps.py  main.py  models.py  schemas.py  security.py
server/app/routes/: auth.py  charts.py  contract.py  entries.py  profile.py  stats.py  support.py  users.py
server/app/services/: contract.py  discounts.py
server/app/utils/: dates.py  money.py
server/app/validators/: cpf_cnpj.py
server/data/: dev.sqlite
store/: filters.js
worker/: config.rb  gemfile  scheduler.rb
