[tool.poetry]
name = "limitclean-server"
version = "0.1.0"
description = "FastAPI backend for LIMITCLEAN"
authors = ["Seu Nome <email@dominio.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110"
uvicorn = {extras = ["standard"], version = "^0.29"}
sqlalchemy = "^2.0"
alembic = "^1.13"
pydantic = "^2.6"
python-dotenv = "^1.0"
python-multipart = "^0.0.6"
aiofiles = "^23.2"
argon2-cffi = "^23.1"
PyJWT = "^2.8"
cryptography = "^42.0"
httpx = "^0.27"
pytest = "^8.2"
pytest-asyncio = "^0.23"
reportlab = "^4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"